prevent table overflow

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -14,6 +14,9 @@
   #wpsi-recent-table, #wpsi-popular-table {
     width: auto;
   }
+  #wpsi-recent-table_wrapper {
+    overflow: hidden;
+  }
   .table-footer {
     bottom: 0 !important;
   }
